// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScopeForm with error renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <ScopeDataEdit
    handleChange={[Function]}
    scope={null}
  />
  <ScopeEditionHelper
    scope={null}
  />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="error"
    >
      ERROR
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ScopeForm with success renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <ScopeDataEdit
    handleChange={[Function]}
    scope={null}
  />
  <ScopeEditionHelper
    scope={null}
  />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="success"
    >
      La gamme a bien été enregistrée
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ScopeForm without Snackbar renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <ScopeDataEdit
    handleChange={[Function]}
    scope={null}
  />
  <ScopeEditionHelper
    scope={null}
  />
</WithStyles(ForwardRef(Grid))>
`;
